# tip-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tip.py  tipconfig.json  tipstate.json
.github/workflows/: ci.yml
tests/: test_tip.py
tipcalc/: __init__.py  cli.py  formats.py  parsing.py  profiles.py  qr.py  tax_data.py  tax_lookup.py  tip_core.py
