[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tip-calculator"
version = "0.1.0"
description = "A precise tip calculator with exact split, CLI, and config-driven defaults."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
keywords = ["tip", "calculator", "cli", "money", "decimal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.2"]
i18n = ["Babel>=2.12"]
qr = ["segno>=1.6"]
dev = ["pytest>=7.0"]

[project.scripts]
tip = "tipcalc.cli:run_cli"
tipcalc = "tipcalc.cli:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tipcalc*"]
exclude = ["tests*"]
